Floated elements and fixed alignment

--- a/Greenhill_Sarah_WIA_The_Project/css/style.css
+++ b/Greenhill_Sarah_WIA_The_Project/css/style.css
@@ -65,8 +65,20 @@ a:hover{
 
 /* Chart */
 
-#zombieChart p{
+#zombieChart{
+	float: left;
+	width: 50%
+}
+
+#zombieChartText{
 	float: right;
+	background-color: #000000;
+	width: 47.18%;
+	height: 450px; 
+}
+
+#zombieChartText p{
+	padding: .5em;
 }
 
 /* Footer */
